# Phillips_Hue_PC_Qt

./: .gitignore
src/: CMakeLists.txt  PBridge.cpp  PBridge.h  PLight.h  QSideBar.cpp  QSideBar.h  main.cpp  page_one.cpp  page_one.h  page_two.cpp  page_two.h  window.cpp  window.h
